# 144-gradcam-finance

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  model.py  train.py
python/notebooks/: example.ipynb
rust/: Cargo.toml  README.md
rust/examples/: fetch_data.rs  gradcam_inference.rs  trading_pipeline.rs
rust/src/: lib.rs
rust/src/api/: bybit.rs  mod.rs
rust/src/models/: cnn.rs  gradcam.rs  mod.rs
